Added Cards On our Page

--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@
     --accent-color-dark: #1d69a3;
     --padding-inline-section: 20px;
 }
+
+
+
 body{
     font-family: "Poppins", sans-serif;
     color: var(--primary-text-color);
@@ -34,16 +37,19 @@ ul{
     list-style: none;
 }
 
-.flex{
-    display: flex;
-    align-items: center;
-}
-
 .container{
     max-width: 1200px;
     margin: auto;
     overflow: hidden;
 }
+
+ /* ########## navbar styling ########## */
+
+.flex{
+    display: flex;
+    align-items: center;
+}
+
 
 nav{
     background-color: #f3faff;
@@ -104,4 +110,50 @@ nav{
 
 .search-button:hover{
     background-color: var(--accent-color-dark);
+}
+
+
+/* ######## Main Body / Card Container Styling ######## */
+
+main{
+    padding-block: 20px;
+    margin-top: 80px;
+}
+
+.cards-container{
+    justify-content: space-between;
+    flex-wrap: wrap;
+    row-gap: 20px;
+    align-items: start;
+}
+
+.card{
+    width: 360px;
+    min-height: 400px;
+    box-shadow: 0px 0px 4px #d4ecff;
+    border-radius: 4px;
+    overflow: hidden;
+    cursor: pointer;
+    background-color: #fff;
+    transition: all 0.3s ease;
+}
+
+.card:hover{
+    box-shadow: 1px 1px 8px #d4ecff;
+    background-color: #f9fdff;
+    transform: translateY(-2px);
+}
+
+.card-header img{
+    width: 100%;
+    height: 180px;
+    object-fit: cover;
+}
+
+.card-content{
+    padding: 12px;
+}
+
+.news-source{
+    margin-block: 12px;
 }
